--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,13 @@
 # GEMINI_API_KEY: Required for Gemini AI API calls.
 # AI Studio automatically injects this at runtime from user secrets.
-# Users configure this via the Secrets panel in the AI Studio UI.
 GEMINI_API_KEY="MY_GEMINI_API_KEY"
+
+# MULTI-KEY ROTATION (Optional)
+# If you have multiple accounts, you can add more keys to bypass free tier rate limits.
+# The app will automatically rotate between these keys if one hits a limit.
+GEMINI_API_KEY_1="SECOND_API_KEY"
+GEMINI_API_KEY_2="THIRD_API_KEY"
+# ... up to GEMINI_API_KEY_20
 
 # APP_URL: The URL where this applet is hosted.
 # AI Studio automatically injects this at runtime with the Cloud Run service URL.
