--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,10 @@ GEMINI_API_KEY="MY_GEMINI_API_KEY"
 
 # MULTI-KEY ROTATION (Optional)
 # If you have multiple accounts, you can add more keys to bypass free tier rate limits.
-# The app will automatically rotate between these keys if one hits a limit.
-GEMINI_API_KEY_1="SECOND_API_KEY"
-GEMINI_API_KEY_2="THIRD_API_KEY"
-# ... up to GEMINI_API_KEY_20
+# IMPORTANT: Additional keys MUST be prefixed with VITE_ to be visible to the browser.
+VITE_GEMINI_API_KEY_1="SECOND_API_KEY"
+VITE_GEMINI_API_KEY_2="THIRD_API_KEY"
+# ... up to VITE_GEMINI_API_KEY_20
 
 # APP_URL: The URL where this applet is hosted.
 # AI Studio automatically injects this at runtime with the Cloud Run service URL.
